--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "4.21.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
@@ -28,4 +31,3 @@
     "seed": "ts-node prisma/seed.ts"
   }
 }
-
