--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "ts-node src/server.ts",
     "build": "tsc",
-    "start": "node dist/src/server.js"
+    "start": "node dist/src/server.js",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
@@ -27,7 +28,6 @@
     "ts-node": "10.9.2",
     "typescript": "^5.6.3"
   },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  }
+  "prisma": {}
 }
+
